--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .image-container {
     width: 80vw;
     height: 80vh;
@@ -64,3 +69,31 @@
     background-color: white;
 }
 
+.info {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+    position: fixed;
+    bottom: 195px;
+    right: -130px;
+    transform: rotate(270deg);
+}
+
+.icon {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+}
+
+.icon:hover {
+    cursor: pointer;
+}
+
+.icons-container {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 100%;
+
+    display: flex;
+    justify-content: flex-end;
+}
